service/tests/requests/snapshots/users/cannot_assign_role_when_user_does_not_exist@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text())"
---
(
    404,
    "{\"error\":\"A referenced record does not exist. Constraint: users_roles_user_id_fkey.\",\"code\":\"invalid_reference\"}",
)
