service/tests/requests/snapshots/users/cannot_create_staff_user_when_email_already_exists@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text(), assigned_roles,)"
---
(
    409,
    "{\"error\":\"User with email already exists\",\"code\":\"entity_already_exists\"}",
    1,
)
