service/tests/requests/snapshots/users/cannot_create_staff_user_with_invalid_payload@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text(), assigned_roles,)"
---
(
    400,
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"confirm_password\":\"Passwords do not match\"}}",
    0,
)
