service/tests/requests/snapshots/users/cannot_create_staff_user_with_missing_role@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text(), assigned_roles,)"
---
(
    404,
    "{\"error\":\"Staff role does not exist\",\"code\":\"invalid_reference\"}",
    0,
)
