service/tests/requests/snapshots/users/cannot_create_staff_user_without_credentials@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text())"
---
(
    401,
    "{\"error\":\"Authentication is required. Please sign in and try again.\",\"code\":\"missing_credentials\"}",
)
