service/tests/requests/snapshots/users/cannot_create_staff_user_without_permission@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text())"
---
(
    403,
    "{\"error\":\"You do not have permission to perform this action.\",\"code\":\"forbidden\"}",
)
