service/tests/requests/snapshots/users/cannot_list_users_without_credentials@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text())"
---
(
    401,
    "{\"error\":\"Missing credentials\",\"code\":\"missing_credentials\"}",
)
