service/tests/requests/snapshots/users/cannot_revoke_role_that_is_not_assigned@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text())"
---
(
    404,
    "{\"error\":\"Entity not found\",\"code\":\"entity_not_found\"}",
)
