service/tests/requests/snapshots/users/cannot_revoke_role_when_payload_is_invalid@users.snap
---
source: tests/requests/users.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"role_id\":\"Role ID must be a positive integer\",\"user_id\":\"User ID must be a positive integer\"}}",
)
